--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="footer"></div>
 
 
-    <script src="script.js" async defer></script>
+    <script src="script.js" ></script>
 </body>
 
 </html>
