--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="footer"></div>
     </div>
 
-    <script src="script.js" async defer></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
